--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "develop": "cross-env NODE_ENV=development node src/server/server.js",
+    "dev": "cross-env NODE_ENV=development node src/server/server.js",
+    "start": "cross-env NODE_ENV=production node src/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
     "webpack": "^5.94.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "webpack-cli": "^5.1.4"
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.4.2"
   }
 }
